force-app/src/objects/fferpcore__Mapping__c.object
<CustomObject>
    <description>Stores details of custom mappings.</description>
    <fields>
        <fullName>fferpcore__AdditionalLookupField__c</fullName>
        <description>The additional source field to compare to identify a unique record.</description>
        <label>Additional Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Condition__c</fullName>
        <description>The source data key that determines whether a mapping is conditionally applied to a target. If specified, the source data value must evaluate to true for the mapping to be applied.</description>
        <inlineHelpText>The source data key that determines whether a mapping is applied to a target. If specified, the source data value must evaluate to true for the mapping to be applied.</inlineHelpText>
        <label>Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__CorrelationSourceKey__c</fullName>
        <description>For child mappings, the source field that contains the record&apos;s unique identifier.</description>
        <label>Unique Identifier on Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__CorrelationStrategy__c</fullName>
        <description>The creation method that defines how to create and maintain linked records.</description>
        <label>Record Creation Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Append</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>UpdateTotal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__CorrelationTargetKey__c</fullName>
        <description>For child mappings, the field on the target in which to store the source record&apos;s unique identifier. The unique identifier is compared when updating records.</description>
        <label>Identifier Reference on Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the custom mapping is disabled.</description>
        <inlineHelpText>If selected, the custom mapping is disabled.</inlineHelpText>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__Filters__c</fullName>
        <description>For child mappings, the source field that determines whether records are created or updated. For records to be created or updated, the value must evaluate to true.</description>
        <label>Filter</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__Identifier__c</fullName>
        <description>Optional identifier for the mapping.</description>
        <label>Mapping Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__LookupField__c</fullName>
        <description>The source field to compare to identify a unique record.</description>
        <label>Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Process__c</fullName>
        <description>Name of the configuration item metadata record that contains the related process.</description>
        <label>Process</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__SourceKeys__c</fullName>
        <description>Keys to extract data from source.</description>
        <label>Source Keys</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__SourcePath__c</fullName>
        <description>The relationship path from the source to the specified source key.</description>
        <label>Source Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__StaticData__c</fullName>
        <description>The exact value to map to the target location.</description>
        <label>Source Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__StaticDescription__c</fullName>
        <description>The description of the fixed data to map to the target location.</description>
        <label>Source Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__TargetChildType__c</fullName>
        <description>The category for the target child record. Target child types enable you to create multiple target child records from a single source child record. For example, Default, Debit Line, or Admin Fee.</description>
        <label>Target Child Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__TargetKeys__c</fullName>
        <description>Keys to populate data on target.</description>
        <label>Target Keys</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__TargetPath__c</fullName>
        <description>The relationship path from the target to the specified target key.</description>
        <label>Target Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__TransformationTable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The data transformation table to apply to the mapping.</description>
        <label>Data Transformation Table</label>
        <referenceTo>fferpcore__DataTransformationTable__c</referenceTo>
        <relationshipLabel>Mappings</relationshipLabel>
        <relationshipName>Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__Type__c</fullName>
        <description>Type of mapping, such as Standard or Relationship.</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Mapping</label>
    <nameField>
        <displayFormat>MAP-{00000}</displayFormat>
        <label>Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>